--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CarrotStyle</string>
+
+    <string name="activity_error_oops">Oops!</string>
+    <string name="activity_error_internet">Can\'t styling because the internet is unstable 😢</string>
+    <string name="activity_error_exception">The carrot was eaten by the rabbit! Please try again later.</string>
+    <string name="activity_error_btn_retry">Retry</string>
 </resources>
