--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="activity_error_internet">Can\'t styling because the internet is unstable 😢</string>
     <string name="activity_error_exception">The carrot was eaten by the rabbit! Please try again later.</string>
     <string name="activity_error_btn_retry">Retry</string>
+
+    <string name="ui_linkcard_toast_copied">Copied.</string>
 </resources>
