--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ carrot-android © 2022 Ji Sungbin. all rights reserved.
+  ~ carrot-android license is under the MIT.
+  ~
+  ~ [strings.xml] created by Ji Sungbin on 22. 1. 25. 오후 5:07
+  ~
+  ~ Please see: https://github.com/carrot-style/carrot-android/blob/main/LICENSE.
+  -->
+
 <resources>
     <string name="app_name">CarrotStyle</string>
 
@@ -8,5 +17,7 @@
 
     <string name="activity_main_toast_error">An error has occurred 😢. Please try again later.</string>
 
-    <string name="ui_linkcard_toast_copied">Copied.</string>
+    <string name="activity_main_component_emptystyled_make_first_styled">Make your first carrot-style!</string>
+    <string name="activity_main_component_styledcard_toast_copied">Copied.</string>
+    <string name="activity_main_component_createstyle_btn_create">Create</string>
 </resources>
