--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -21,6 +21,6 @@
     <string name="activity_main_component_styledcard_toast_copied">Copied.</string>
     <string name="activity_main_component_createstyle_btn_create">Create</string>
     <string name="activity_main_component_createstyle_full_address">Full address:</string>
-    <string name="activity_main_component_createstyle_my_style">My style:</string>
-    <string name="activity_main_component_createstyle_memo">Memo:</string>
+    <string name="activity_main_component_createstyle_my_style">My style: (max 15 length)</string>
+    <string name="activity_main_component_createstyle_memo">One line note:</string>
 </resources>
