--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="activity_error_btn_retry">Retry</string>
 
     <string name="activity_main_toast_error">An error has occurred 😢. Please try again later.</string>
+    <string name="activity_main_dialog_use_notice">In order to use carrot.style service, you need to agree to the terms of service.</string>
+    <string name="activity_main_dialog_section_terms_of_service">[terms of service]</string>
+    <string name="activity_main_dialog_btn_agree">agree</string>
+    <string name="activity_main_dialog_btn_disagree">disagree</string>
 
     <string name="activity_main_component_emptystyled_make_first_styled">Make your first carrot-style!</string>
     <string name="activity_main_component_styledcard_toast_copied">Copied.</string>
